--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -38,11 +38,59 @@
     </div>
     <div id="right-part">
       <p>
-        This is not a real online service! You know you need something like this
-        in your life to help you realize your deepest dreams. Sign up now to get
-        started.
+        This is not a real online service! You know you need something
+        <br />like this in your life to help you realize your deepest dreams.<br />
+        Sign up now to get started.<br />
+        <br>
+        You know you want to.
       </p>
-      <p>You know you want to.</p>
+      <div class="form-container">
+        <form id="signup-form">
+          <h2>Let's do this!</h2>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="first-name">FIRST NAME</label>
+              <input type="text" id="first-name" name="first-name" required />
+            </div>
+            <div class="form-group">
+              <label for="last-name">LAST NAME</label>
+              <input type="text" id="last-name" name="last-name" required />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="email">EMAIL</label>
+              <input type="email" id="email" name="email" required />
+            </div>
+            <div class="form-group">
+              <label for="phone-number">PHONE NUMBER</label>
+              <input
+                type="tel"
+                id="phone-number"
+                name="phone-number"
+                required
+              />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group">
+              <label for="password">PASSWORD</label>
+              <input type="password" id="password" name="password" required />
+            </div>
+            <div class="form-group">
+              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <input
+                type="password"
+                id="confirm-password"
+                name="confirm-password"
+                required
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+      <button id="create-account-btn">Create Account</button>
+      <p>Are you have an account? <a href="" style="color:#596D48 ;">Log in</a></p>
     </div>
   </body>
 </html>
