Update sign-up-form.css and sign-up-form.html

--- a/sign-up-form.html
+++ b/sign-up-form.html
@@ -37,13 +37,16 @@
       />
     </div>
     <div id="right-part">
-      <p>
-        This is not a real online service! You know you need something
-        <br />like this in your life to help you realize your deepest dreams.<br />
-        Sign up now to get started.<br />
-        <br>
-        You know you want to.
-      </p>
+      <div id="hero-text">
+        <p>
+          This is not a real online service! You know you need something
+          <br />like this in your life to help you realize your deepest
+          dreams.<br />
+          Sign up now to get started.<br />
+          <br />
+          You know you want to.
+        </p>
+      </div>
       <div class="form-container">
         <form id="signup-form">
           <h2>Let's do this!</h2>
@@ -90,7 +93,10 @@
         </form>
       </div>
       <button id="create-account-btn">Create Account</button>
-      <p>Are you have an account? <a href="" style="color:#596D48 ;">Log in</a></p>
+      <p>
+        Are you have an account?
+        <a href="" style="color: #596d48; text-decoration: none">Log in</a>
+      </p>
     </div>
   </body>
 </html>
